@@ -2,8 +2,6 @@ package UAV::Pilot::Control;
 use v5.14;
 use Moose::Role;
 
-with 'UAV::Pilot::SDL::JoystickConverter';
-
 has 'driver' => (
     is   => 'ro',
     does => 'UAV::Pilot::Driver',
