@@ -4,8 +4,9 @@ Revision history for perl module UAV::Pilot
 
 - Unicast implemented for Parrot AR.Drone navdata
 - WumpusRover implemented
-- Decouple interface in bin/uav and share/*.uav libaries to support more than 
+- Decoupled interface in bin/uav and share/*.uav libaries to support more than 
   just the AR.Drone
+- Decoupled SDL Joystick interface from AR.Drone
 - Change ARDrone::Control::Event interface to take an existing condvar rather 
   than creating and returning a new one
 
